--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,16 +81,16 @@
         <item>15</item>
     </string-array>
 
-    <string-array name="items">
+<string-array name="items">
         <item>Office chair</item>
         <item>Gaming chair</item>
         <item>Table chair</item>
     </string-array>
 
-    <integer-array name="cart_prices">
-        <item>60</item>
-        <item>150</item>
-        <item>40</item>
+    <integer-array name="prices">
+        <item>100</item>
+        <item>10</item>
+        <item>10</item>
     </integer-array>
 
     <integer-array name="amounts">
